chore: enabled request validations on gateway, added operand count, fixed authentication to prevent username enumeration
