# src/operations/data/get-operation-by-type.repository.ts
@@ -1,7 +1,8 @@
 import { Pool } from 'pg';
 import { GetOperationRepository } from '../../records/execute-operation.interactor';
 
-const statement = 'select id, type, cost from "operation" where type = $1';
+const statement =
+  'select id, type, cost, operands from "operation" where type = $1';
 
 export const makeGetOperationByTypeRepository =
   (dependencies: { pool: Pool }): GetOperationRepository =>
